@@ -171,6 +171,7 @@ void StopSfx(const std::string &Alias);
 // Public Sub StartMusic(A As Integer) 'play music
 void setMusicStartDelay();
 void delayedMusicStart();
+void delayedMusicReset();
 bool delayMusicIsSet();
 // play music
 void StartMusic(int A, int fadeInMs = 0);
